<resources>
    <string name="app_name">T01-AlunoCursos</string>
    <string name="title_activity_alunos">Alunos</string>
    <string name="tab_text_1">Inserir</string>
    <string name="tab_text_2">Editar</string>
    <string name="tab_text_3">Inserir</string>
    <string name="tab_text_4">Editar</string>
    <string name="btAluno">Aluno</string>
    <string name="btCurso">Curso</string>
    <string name="btConsulta">Consulta</string>
    <string name="txtNome">Nome:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtTel">Telefone:</string>
    <string name="txtCpf">CPF:</string>
    <string name="txtQtdHoras">Carga Horária:</string>
    <string name="icSearchAluno">Digite o nome do aluno</string>
    <string name="icSearchCurso">Digite o nome do curso</string>
    <string name="title_activity_cursos">Cursos</string>
    <string name="btExcluir">Excluir</string>
    <string name="txtCurso">Curso:</string>
    <string name="btSalvar">Salvar</string>
    <string name="addAluno">Adicionar novo aluno</string>
    <string name="addCurso">Adicionar novo curso</string>
</resources>