<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="469dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="154dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNomeAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtNome"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNomeAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:ems="17"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtEmail"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:ems="17"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtTel"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:ems="17"
            android:inputType="phone" />

        <TextView
            android:id="@+id/txtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtCpf"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ems="17"
            android:inputType="number" />


    </LinearLayout>

    <Button
        android:id="@+id/btInserirAluno"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/tab_text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>