<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsrtAluActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="417dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNomeAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/txtNome"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNomeAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:ems="17"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/txtCurso"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerCursos"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="+ Adicionar novo curso"
            android:textColor="@color/ufms_azul"
            android:textSize="18dp"
            android:onClick="abreAddNovoCurso"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/txtEmail"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:ems="17"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/txtTel"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:ems="17"
            android:inputType="phone" />

        <TextView
            android:id="@+id/txtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/txtCpf"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:ems="17"
            android:inputType="number" />

    </LinearLayout>


    <Button
        android:id="@+id/btInserirAluno"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="140dp"
        android:onClick="insereAluno"
        android:text="@string/btSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btExcluirAluno"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="140dp"
        android:onClick="excluiAluno"
        android:text="@string/btExcluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btInserirAluno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>