<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaInicial"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="188dp"
        android:layout_marginBottom="104dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btAluno"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="148dp"
            android:onClick="abrirAluno"
            android:text="@string/btAluno"
            app:backgroundTint="@color/ufms_azul" />/>

        <Button
            android:id="@+id/btCurso"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="148dp"
            android:onClick="abrirCurso"
            android:text="@string/btCurso"
            app:backgroundTint="@color/ufms_azul" />/>

        <Button
            android:id="@+id/btConsulta"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="148dp"
            android:text="@string/btConsulta"
            app:backgroundTint="@color/ufms_azul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="205dp"
        android:layout_height="220dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="108dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" >

        <ImageView
            android:id="@+id/imgUfms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ufms_logo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>