<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="413dp"
        android:layout_height="198dp"
        android:layout_marginTop="54dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNomeCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtNome"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNomeCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:ems="17"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtQtdHrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtQtdHoras"
            android:textColor="@color/ufms_azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtQtdHrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ems="17"
            android:inputType="number" />


    </LinearLayout>

    <Button
        android:id="@+id/btInserirCurso"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginStart="226dp"
        android:layout_marginLeft="226dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/tab_text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>